--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -1,10 +1,10 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "query.sql"
-    schema: "schema.sql"
+    queries: "internal/db/query.sql"
+    schema: "migrations"
     gen:
       go:
-        package: "sqlc"
-        out: "sqlc"
+        package: "db"
+        out: "internal/db"
         sql_package: "pgx/v5"
