--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -1,8 +1,8 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "internal/db/query.sql"
-    schema: "migrations"
+    queries: "internal/db/queries"
+    schema: "internal/db/migrations"
     gen:
       go:
         package: "db"
