--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,12 @@ services:
 
   backend:
     build: ./backend
+    container_name: backend
     ports:
       - 8080:8080
+    volumes:
+      - ./backend:/backend
+    tty: true
     env_file: .env
     depends_on:
       - postgres
@@ -30,8 +34,12 @@ services:
 
   frontend:
     build: ./frontend
+    container_name: frontend
     ports:
       - 3000:3000
+    volumes:
+      - ./frontend:/frontend
+    tty: true
     depends_on:
       - backend
 
