--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
     container_name: redis
     ports:
       - 6379:6379
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    command:
+      - /bin/sh
+      - -c
+      - redis-server --requirepass "$${REDIS_PASSWORD:?REDIS_PASSWORD variable is not set}"
     volumes:
       - redis_data:/data
 
@@ -36,7 +42,7 @@ services:
     build: ./frontend
     container_name: frontend
     ports:
-      - 3000:3000
+      - 5173:5173
     volumes:
       - ./frontend:/frontend
     tty: true
