--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-# CMD ['go', 'run', 'cmd/main.go']
+# CMD ['go', 'run', 'cmd/api/main.go']
